# hamr-ros

./: README.md  notes_for_me.txt  todo.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/hamr_interface/: HamrCommand.h  HamrStatus.h  HoloStatus.h  MotorStatus.h  VelocityStatus.h
devel/include/hamr_test/: HamrCommand.h  HamrStatus.h  MotorStatus.h  TestMod.h
devel/lib/pkgconfig/: hamr_interface.pc  hamr_test.pc
devel/share/hamr_interface/cmake/: hamr_interface-msg-paths.cmake  hamr_interfaceConfig.cmake
devel/share/hamr_test/cmake/: hamr_test-msg-extras.cmake  hamr_test-msg-paths.cmake  hamr_testConfig.cmake
install/: .rosinstall
install/include/hamr_test/: HamrStatus.h  HoloStatus.h  MotorStatus.h  TestWrap.h  VelocityStatus.h
install/lib/pkgconfig/: hamr_interface.pc  hamr_test.pc
install/share/hamr_interface/cmake/: hamr_interface-msg-extras.cmake  hamr_interfaceConfig.cmake
install/share/hamr_interface/msg/: VelocityStatus.msg
install/share/hamr_test/cmake/: hamr_test-msg-extras.cmake  hamr_test-msg-paths.cmake  hamr_testConfig.cmake
src/hamr_interface/: CMakeLists.txt  package.xml
src/hamr_interface/launch/: hamr_setup.launch
src/hamr_interface/msg/: HamrCommand.msg  HamrStatus.msg
src/hamr_interface/src/: hamr_controller.py  hamr_tester.py  joystick_controller.py
src/hamr_test/: CMakeLists.txt  README.md  msg_needs
src/hamr_test/launch/: hamr_setup.launch
src/hamr_test/msg/: HamrStatus.msg  MotorStatus.msg
src/hamr_test/scripts/: hamr_controller.py  listener.py  publisher.py  velocity_live_plotter.py
(+51 files in other folders)
