<?xml version="1.0"?>
<package>
  <name>hamr_interface</name>
  <version>1.0.0</version>
  <description>A Python interface for the HAMR</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hyoo@seas.upenn.edu">Hohun (Edward) Yoo</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="hyoo@seas.upenn.edu">Hohun (Edward) Yoo</author>

  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <export>
  </export>
</package>